[package]
name = "x-influx"
version = "0.9.0"
authors = ["Henrik Jürges <juerges.henrik@gmail.com>"]
description = "A simple import tool for influxdb."

# documentation stuff
#documentation =
homepage = "https://github.com/santifa/x-influx"
repository = "https://github.com/santifa/x-influx"
readme = "README.md"
license-file = "LICENSE"

# how to categorize
keywords = ["cli", "influxdb", "csv"]
categories = ["Command line utilities"]

# links
[badges]
appveyor = { repository = "https://github.com/santifa/x-influx", branch = "master", service = "github" }
travis-ci = { repository = "https://travis-ci.org/santifa/x-influx", branch = "master" }

[dependencies]
chrono = "~0.4"
influent = "~0.4"
docopt = "~0.8"
serde = "~1.0"
serde_derive = "~1.0"